# Advanced_C_HW2

./: .travis.yml  CPPLINT.cfg  README.md  README.rst
HW_2/: CMakeLists.txt
HW_2/project/include/: utils.h
HW_2/project/include/common/: common_utils.h
HW_2/project/include/multi/: multi_process_utils.h
HW_2/project/include/one/: one_proc_utils.h
HW_2/project/src/: main.c  test_main.c  utils.c
HW_2/project/src/multi/: mult_proc_calculate_matrix.c  multi_calculate_matrix.c
HW_2/project/src/one/: calculate_matrix.c
HW_2/tests/: CMakeLists.txt  generate_matrix.cpp  generate_tests.sh  test.cpp  tests_for_valgrind.cpp
linters/: run.sh
linters/cpplint/: cpplint.py
